site/public/css/markdown.css
/*
 * This file defines a standardized set of styling rules for html elements which have been converted from
 * markdown to html using our markdown parser.
 *
 * The 'markdown' class should never be added directly to an element. Instead, render that element's content with
 * site/app/templates/misc/Markdown.twig
 *
 * Beware when making changes here, as your changes are likely to affect the look and feel of several pages on submitty.
 */

/* Actual rendered markdown styling (Markdown.twig) */
.markdown {
    /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
    font-family: "Source Sans Pro", sans-serif;
    white-space: normal;
    position: relative;
    overflow-wrap: break-word;
}

.markdown h1,
.markdown h2,
.markdown h3,
.markdown h4,
.markdown h5,
.markdown h6 {
    margin: 0;
}

.markdown h1 *,
.markdown h2 *,
.markdown h3 *,
.markdown h4 *,
.markdown h5 *,
.markdown h6 * {
    /* stylelint-disable-next-line declaration-no-important */
    font-size: inherit !important;
}

.markdown p {
    margin-top: 12px;
    margin-bottom: 12px;
    white-space: pre-wrap;
}

.markdown ol,
.markdown ul {
    margin-bottom: 12px;
    white-space: normal;
    padding-left: 15px;
}

.markdown li {
    margin-left: 25px;
    white-space: normal;
}

.markdown table {
    border-collapse: collapse;
    border: 1px solid var(--text-black);
}

.markdown pre {
    position: relative;
    background: var(--code-box-background-light-gray);
    color: var(--code-box-font-color-dark-gray);
}

.markdown pre + pre:not(.line-numbers) {
    border-top: 1px dashed var(--text-black);
}

.markdown .line-numbers {
    position: absolute;
    top: 1em;
    padding-right: 1px;
    font-size: 13px;
    text-align: right;
    border-right: 0.5px solid var(--standard-medium-gray);
}

.markdown code {
    font-size: 13px;
}

.markdown blockquote {
    border-left: 4px solid var(--standard-dark-gray);
    padding-left: 0.75em;
    margin-left: 0;
    color: var(--standard-dark-gray);
}

[data-theme="dark"] .markdown blockquote {
    border-left: 4px solid var(--standard-light-medium-gray);
    color: var(--standard-light-medium-gray);
}

.markdown pre > code {
    display: block;
    white-space: pre;
    padding: 1em 1em 1em 2em;
    overflow-x: scroll;
}

.markdown th,
.markdown td {
    border: 1px solid var(--standard-light-gray);
    padding: 3px;
}

/* Styling of markdown input space (MarkdownArea.twig) */
.markdown-area {
    border-radius: 6px;
    border: 1px solid var(--standard-light-gray);
}

/* header (.markdown-area-header + children) */
.markdown-area-header {
    display: flex;
    flex-direction: row;
    background-color: var(--standard-pale-gray);
    padding: 0 10px;
    border-radius: 6px 6px 0 0;
    overflow-x: hidden;
}

[data-theme="dark"] .markdown-area-header {
    background-color: var(--standard-deep-dark-gray);
}

.markdown-area-toolbar {
    display: flex;
    margin-left: auto;
    align-items: center;
    flex-wrap: wrap;
    margin-bottom: 1px;
}

.markdown-mode-buttons {
    display: flex;
    margin-top: 10px;
    flex-wrap: wrap;
}

.markdown-mode-tab {
    font-size: 14px;
    margin-left: 5px;
    padding-left: 16px;
    padding-right: 16px;
    min-height: 35px;
    cursor: pointer;
    display: flex;
    align-items: center;
}

.markdown-mode-tab.active {
    border: 1px solid var(--standard-light-gray);
    border-radius: 6px 6px 0 0;
    border-bottom-style: none;
    background-color: var(--default-white);
    color: var(--text-black);
}

.markdown-mode-tab:not(.active) {
    border: 1px solid var(--standard-pale-gray);
    background-color: var(--standard-pale-gray);
    color: var(--standard-medium-gray);
    transition: color 0.5s 0s;
}

[data-theme="dark"] .markdown-mode-tab:not(.active) {
    background-color: var(--standard-deep-dark-gray);
    border-color: var(--standard-deep-dark-gray);
}

.markdown-mode-tab:not(.active):hover {
    color: var(--text-black);
}

.markdown-tool {
    cursor: pointer;
    margin-left: 3px;
}

/* body (.markdown-area-body + children) */
.markdown-area-body {
    padding: 16px;
    background: var(--default-white);
    border-radius: 0 0 6px 6px;
    position: relative;
    display: flex;
    flex-direction: column;
    /* stylelint-disable-next-line declaration-no-important */
    height: auto !important;
    min-height: 100px;
    max-height: none;
    align-items: stretch;
}

.markdown-area textarea {
    resize: vertical;
    overflow: auto;
    min-height: 100px;
    tab-size: 4;
}

.markdown-preview {
    border: none;
    background-color: var(--default-white);
    border-radius: 4px;
    padding: 4px 6px;
    /* stylelint-disable-next-line declaration-no-important */
    height: auto !important;
    overflow: auto;
    resize: none;
    min-height: 100px;
    width: 100%;
}

.btn-markdown {
    margin-left: 5px;
}

/* Preview Loading Spinner */
.markdown-preview-load-spinner {
    display: none;
    position: relative;
    width: 20px;
    height: 20px;
}

.markdown-preview-load-spinner div {
    box-sizing: border-box;
    display: block;
    position: absolute;
    width: 16px;
    height: 16px;
    margin: 2px 2px 2px 5px;
    border: 2px solid var(--submitty-logo-blue);
    border-radius: 50%;
    animation: markdown-preview-load-spinner 1.2s cubic-bezier(0.5, 0, 0.5, 1)
        infinite;
    border-color: var(--submitty-logo-blue) transparent transparent transparent;
}

.markdown-preview-load-spinner div:nth-child(1) {
    animation-delay: -0.45s;
}

.markdown-preview-load-spinner div:nth-child(2) {
    animation-delay: -0.3s;
}

.markdown-preview-load-spinner div:nth-child(3) {
    animation-delay: -0.15s;
}

@keyframes markdown-preview-load-spinner {
    0% {
        transform: rotate(0deg);
    }

    100% {
        transform: rotate(360deg);
    }
}

#peer-table th {
    border: 1px solid var(--standard-light-gray);
}

.markdown img {
    /* stylelint-disable-next-line color-named */
    background-color: white;
    max-width: 100%;
}

